[package]
name = "komodo-rpc"
description = "A wrapper for Komodo RPCs"
version = "0.1.1"
authors = ["Jorian <hey@jorian.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
komodo-rpc-json = { version = "0.1.0", path = "../json" }

jsonrpc = "0.11"
os_info = "2.0"
dirs = "3.0"
serde = "1.0.115"
serde_json = "1.0.57"