[package]
name = "komodo-rpc-json"
version = "0.1.0"
authors = ["jorian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
hex = "0.3"

bitcoin = { version = "0.23", features = [ "use-serde" ] }